Fix video thumbnail selector exceeding the modal size (#891)
## Issue
- 655 "Take a snapshot from your video" controls off-screen
- It also exceeds horizontally on mobile.

## Fix
Just add css constraints.

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -861,6 +861,11 @@ $control-bar-icon-size: 0.8rem;
   display: none !important; // yes this is dumb, but this was broken and the above CSS was overriding
 }
 
+.video-thumbnail-generator {
+  width: 100%;
+  max-height: 30vh;
+}
+
 // ****************************************************************************
 // Autoplay Countdown
 // ****************************************************************************
